[package]
name = "rust-sns"
authors = ["Nokotaro Takeda"]
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
envy = "0.4.2"
eyre = "0.6.8"
once_cell = "1.17.1"
serde = "1.0.162"
serde_json = "1.0.96"
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio", "postgres" ] }